--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
-                    scale="0.00364161404003652 0.00364161404003652 0.00364161404003652"
+                    scale="12 12 12"
                     gps-entity-place="latitude: 45.54716593697126; longitude: -73.6091245373355;"
                 ></a-entity>
 
